microk8s/metrics/ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: grafana
  namespace: metrics
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  tls:
    secretName: grafana-hackinglab-kubes-cert
  routes:
    - match: Host(`grafana.hackinglab.kubes`)
      kind: Rule
      services:
        - name: prometheus-grafana
          port: 80

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: prometheus
  namespace: metrics
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  tls:
    secretName: grafana-hackinglab-kubes-cert
  routes:
    - match: Host(`prometheus.hackinglab.kubes`)
      kind: Rule
      services:
        - name: prometheus-kube-prometheus-prometheus
          port: 9090
